syntax = "proto3";
package fx.ibc.applications.transfer.v1;

option go_package = "github.com/pundiai/fx-core/x/ibc/middleware/types";

// FungibleTokenPacketData defines a struct for the packet payload
// See FungibleTokenPacketData spec:
// https://github.com/cosmos/ics/tree/master/spec/ics-020-fungible-token-transfer#data-structures
message FungibleTokenPacketData {
  // the token denomination to be transferred
  string denom = 1;
  // the token amount to be transferred
  string amount = 2;
  // the sender address
  string sender = 3;
  // the recipient address on the destination chain
  string receiver = 4;
  // the router is hook destination chain
  string router = 5;
  // the fee is destination fee
  string fee = 6;
  // optional memo
  string memo = 7;
}
